# MedMNIST_Training

./: .gitignore  README.md  agg_results_0_pt3.csv  agg_results_100_pt3.csv  agg_results_10_pt3.csv  agg_results_25_pt3.csv  agg_results_50_pt3.csv  agg_results_75_pt3.csv  agg_results_pid_0.csv  agg_results_pid_10.csv  agg_results_pid_100.csv  agg_results_pid_25.csv  agg_results_pid_50.csv  agg_results_pid_75.csv  aggregated_results_0.csv  aggregated_results_10.csv  aggregated_results_100.csv  aggregated_results_25.csv  aggregated_results_50.csv  aggregated_results_75.csv  client_metrics_20251014_180608.csv  client_metrics_20251015_134946.csv  client_metrics_20251015_190009.csv  client_metrics_20251015_194125.csv  client_metrics_20251015_194242.csv  client_metrics_20251015_230637.csv  client_metrics_20251015_233429.csv  client_metrics_20251016_092847.csv  client_metrics_20251016_093129.csv  client_metrics_20251028_111255.csv  client_metrics_20251028_112128.csv  client_metrics_20251028_113056.csv  client_metrics_20251028_114157.csv  client_metrics_20251028_122140.csv  client_metrics_20251028_125440.csv  client_metrics_20251028_131318.csv  client_metrics_20251028_140900.csv  client_metrics_20251028_142524.csv  client_metrics_20251028_145219.csv  client_metrics_20251029_171532.csv  (+117 more)
agg_results/: agg_results_0_pt3.csv  agg_results_100_pt3.csv  agg_results_10_pt3.csv  agg_results_25_pt3.csv  agg_results_50_pt3.csv  agg_results_75_pt3.csv  agg_results_pid_0.csv  agg_results_pid_10.csv  agg_results_pid_100.csv  agg_results_pid_25.csv  agg_results_pid_50.csv  agg_results_pid_75.csv  (+8 more)
(+30 files in other folders)
