[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monaiexample"
version = "1.0.0"
description = "Federated Learning with MONAI and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.21.0",
    "flwr-datasets[vision]>=0.5.0",
    "monai==1.3.2",
    "filelock==3.15.4",
    "numpy<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "monaiexample.server_app:app"
clientapp = "monaiexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 20
# fraction fit is how many clients are sampled 
# 0.2 = 4 out of the 20 clients are sampled
fraction-fit = 1
batch-size = 128
# set the level of data flipping
percent-flipped = 0.0

[tool.flwr.federations]
default = "local-simulation"

# this will run the local simulation
[tool.flwr.federations.local-simulation]
options.num-supernodes = 20

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0.25 # at most 4 ClientApps will run in a given GPU

